--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
   },
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.1.0",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
     "next": "10.0.1",
+    "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-is": "17.0.1",
     "styled-components": "5.2.1",
+    "tailwindcss": "^2.0.2",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
